colocando arquivos na raiz do projeto

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,14 @@ services:
   app:
     container_name: "app"
     restart: always
-    build: .
+    build: 
+      context: ./app
     environment:
-      - GEMINI_API_KEY=AIzaSyAHHCMRDs3pA76mOIaTpNTukKsm47TMuoQ
+      - GEMINI_API_KEY=${GEMINI_API_KEY}
     ports:
       - "3000:3000"
     volumes:
-      - .:/app
+      - .:/app/app
       - /app/node_modules
       - ./database:/app/database
     command: sh -c "npx sequelize-cli db:migrate && npm start"   
